--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,21 +51,23 @@
                   {%- endif -%}
                 </a>
               </li>
-              {% if site.blog_nav_title %}
+              
+              <!-- {% if site.blog_nav_title %} -->
               <!-- Blog -->
-              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
+              <!-- <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
                 <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
                   {%- if page.url contains 'blog' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
                 </a>
               </li>
-              {%- endif %}
+              {%- endif %} -->
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
               {%- for p in sorted_pages -%}
               {%- if p.nav and p.autogen == nil -%}
+              
               {%- if p.dropdown %}
               <li class="nav-item dropdown {% if page.title == p.title %}active{% endif %}">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ p.title }}
@@ -94,26 +96,26 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
-              {%- if site.enable_darkmode %}
+              <!-- {%- if site.enable_darkmode %} -->
 
               <!-- Toogle theme mode -->
-              <li class="toggle-container">
+              <!-- <li class="toggle-container">
                 <button id="light-toggle" title="Change theme">
                   <i class="fas fa-moon"></i>
                   <i class="fas fa-sun"></i>
                 </button>
-              </li>
-              {%- endif %}
+              </li> -->
+              <!-- {%- endif %} -->
             </ul>
           </div>
         </div>
       </nav>
-{% if site.enable_progressbar %}
+<!-- {% if site.enable_progressbar %} -->
       <!-- Scrolling Progress Bar -->
-      <progress id="progress" value="0">
+      <!-- <progress id="progress" value="0">
         <div class="progress-container">
           <span class="progress-bar"></span>
         </div>
       </progress>
-{%- endif %}
+{%- endif %} -->
     </header>
