--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -793,6 +793,7 @@ footer.sticky-bottom {
 
       div.abstract.hidden.open {
         border-color: var(--global-text-color);
+        text-align: left; // Abstract left aling (changed)
       }
     }
   }
